RESOLVED FIXED28165
Application cache maximum size cannot be set before the database is opened
https://bugs.webkit.org/show_bug.cgi?id=28165
Summary Application cache maximum size cannot be set before the database is opened
Alexey Proskuryakov
Reported 2009-08-10 13:43:42 PDT
An assertion fails if http/tests/max-size.html is run on its own. Patch forthcoming.
Attachments
proposed fix (1.16 KB, patch)
2009-08-10 13:45 PDT, Alexey Proskuryakov
beidson: review+
Alexey Proskuryakov
Comment 1 2009-08-10 13:45:37 PDT
Created attachment 34511 [details] proposed fix
Andrei Popescu
Comment 2 2009-08-10 13:48:33 PDT
Thanks for fixing this and sorry I missed it.
Alexey Proskuryakov
Comment 3 2009-08-10 13:51:26 PDT
Committed revision 47002.
Note You need to log in before you can comment on or make changes to this bug.