        Reviewed by Brady Eidson.

https://bugs.webkit.org/show_bug.cgi?id=28165
        Application cache maximum size cannot be set before the database is opened

        * loader/appcache/ApplicationCacheStorage.cpp:
        (WebCore::ApplicationCacheStorage::vacuumDatabaseFile): Open appcache database if it isn't
        open yet.



git-svn-id: svn://svn.chromium.org/blink/trunk@47002 bbb929c8-8fbe-4397-9dbb-9b2b20218538